Added a file for keys that currently has dummy values to see if it will be ignored properly

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/AustenVanBrogen/getPicDiscordBot/issues"
   },
-  "homepage": "https://github.com/AustenVanBrogen/getPicDiscordBot#readme"
+  "homepage": "https://github.com/AustenVanBrogen/getPicDiscordBot#readme",
+  "dependencies": {
+    "discord.js": "^13.6.0"
+  }
 }
